remove unwanted fs based attachment storage
